Creacion de modelos de la base de datos y servicios para la aplicacion movil
