# server/api/controllers/election/electionRouter.js
@@ -1,0 +1,7 @@
+import * as express from 'express';
+import controller from './electionController';
+
+export default express
+    .Router()
+    .get('/getOptions', controller.getOptions)
+    .get('/getResults/:electionId', controller.getResults)
